--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "Veez Music Bot",
-    "logo": "https://telegra.ph/file/9dd9b20abcda2d7bb6725.png",
-    "description": "veez music allow you to stream music trought the telegram voice chat feature.",
+    "name": "Isabella Music",
+    "logo": "https://telegra.ph/file/3bb4b83c845a01489162b.jpg",
+    "description": "Isabella allow you to stream music trought the telegram voice chat feature.",
     "keywords": ["music", "voice chat", "telegram"],
-    "repository": "https://github.com/levina-lab/veezmusic",
+    "repository": "https://github.com/Thilinaweerasekara2003/IsabellaMusic",
     "stack": "container",
     "env": {
         "SESSION_NAME": {
@@ -79,12 +79,12 @@
         "UPDATES_CHANNEL": {
             "description": "if you have channel, fill the channel username here without @",
             "required": false,
-            "value": "levinachannel"
+            "value": "Isabellaupdate"
         },
         "GROUP_SUPPORT": {
             "description": "if you have group, fill the group username here without @",
             "required": false,
-            "value": "VeezSupportGroup"
+            "value": "Isabellasupport"
         }
     },
     "buildpacks": [
